webook003/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-live-mysql
spec:
  selector:
    app: webook-live-mysql
  ports:
    - protocol: TCP
# 容器暴露的端口
      port: 11309
# 容器内部端口
      targetPort: 3306
# 集群内部访问
      nodePort: 30002
  type: NodePort
