webook003/k8s-webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-live
spec:
  selector:
    app: webook-live
  ports:
    - protocol: TCP
      port: 82
      targetPort: 8080
  type: LoadBalancer
