webook003/k8s-ingress-nginx2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-live-ingress
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: live.webook.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: webook-live
                port:
                  number: 82
